added SwaggerModels
